--- a/src/build.css
+++ b/src/build.css
@@ -621,6 +621,10 @@ video {
   display: flex;
 }
 
+.table{
+  display: table;
+}
+
 .hidden{
   display: none;
 }
@@ -633,6 +637,14 @@ video {
   height: 1.5rem;
 }
 
+.h-4{
+  height: 1rem;
+}
+
+.h-1{
+  height: 0.25rem;
+}
+
 .w-6{
   width: 1.5rem;
 }
@@ -643,6 +655,18 @@ video {
 
 .w-2\/3{
   width: 66.666667%;
+}
+
+.w-3{
+  width: 0.75rem;
+}
+
+.w-4{
+  width: 1rem;
+}
+
+.w-1{
+  width: 0.25rem;
 }
 
 .min-w-\[280px\]{
@@ -689,6 +713,10 @@ video {
 
 .gap-3{
   gap: 0.75rem;
+}
+
+.gap-1{
+  gap: 0.25rem;
 }
 
 .gap-x-5{
@@ -766,6 +794,16 @@ video {
 .bg-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(118 238 89 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+}
+
+.bg-red-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .p-1\.5{
@@ -871,6 +909,11 @@ video {
   font-size: 0.5rem;
 }
 
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .leading-none{
   line-height: 1;
 }
@@ -894,6 +937,11 @@ video {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.filter{
+  -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+          filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-colors{
@@ -1011,6 +1059,11 @@ textarea{
 .hover\:bg-\[\#283543\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(40 53 67 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-yellow-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
 .hover\:text-white:hover{
