--- a/src/build.css
+++ b/src/build.css
@@ -569,14 +569,6 @@ video {
   position: relative;
 }
 
-.top-1\/2{
-  top: 50%;
-}
-
-.left-2{
-  left: 0.5rem;
-}
-
 .-top-1{
   top: -0.25rem;
 }
@@ -593,6 +585,14 @@ video {
   left: 0px;
 }
 
+.top-1\/2{
+  top: 50%;
+}
+
+.left-2{
+  left: 0.5rem;
+}
+
 .z-50{
   z-index: 50;
 }
@@ -601,12 +601,20 @@ video {
   margin-left: 1.75rem;
 }
 
-.flex{
-  display: flex;
+.ml-2{
+  margin-left: 0.5rem;
 }
 
-.table{
-  display: table;
+.mr-2{
+  margin-right: 0.5rem;
+}
+
+.ml-4{
+  margin-left: 1rem;
+}
+
+.flex{
+  display: flex;
 }
 
 .hidden{
@@ -621,16 +629,20 @@ video {
   height: 1.5rem;
 }
 
-.w-6{
-  width: 1.5rem;
-}
-
 .w-full{
   width: 100%;
 }
 
-.w-2\/3{
-  width: 66.666667%;
+.w-6{
+  width: 1.5rem;
+}
+
+.w-\[70px\]{
+  width: 70px;
+}
+
+.w-3\/4{
+  width: 75%;
 }
 
 .min-w-\[280px\]{
@@ -679,10 +691,6 @@ video {
   gap: 0.75rem;
 }
 
-.gap-1{
-  gap: 0.25rem;
-}
-
 .gap-0\.5{
   gap: 0.125rem;
 }
@@ -709,12 +717,12 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-sm{
-  border-radius: 0.125rem;
-}
-
 .rounded-full{
   border-radius: 9999px;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
 }
 
 .border{
@@ -723,6 +731,11 @@ video {
 
 .border-b{
   border-bottom-width: 1px;
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .border-input{
@@ -734,24 +747,19 @@ video {
   border-color: #a1a1a13e;
 }
 
-.border-gray-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
-}
-
-.border-gray-100{
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-
-.border-gray-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-
 .border-b-slate-300{
   --tw-border-opacity: 1;
   border-bottom-color: rgb(203 213 225 / var(--tw-border-opacity));
+}
+
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#F2F4F6\]{
@@ -763,14 +771,14 @@ video {
   background-color: transparent;
 }
 
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-red-500{
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
 .bg-yellow-500{
@@ -778,27 +786,14 @@ video {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
-.bg-primary{
-  --tw-bg-opacity: 1;
-  background-color: rgb(118 238 89 / var(--tw-bg-opacity));
-}
-
 .bg-c-gray{
   --tw-bg-opacity: 1;
   background-color: rgb(31 45 61 / var(--tw-bg-opacity));
 }
 
-.bg-gray-100{
+.bg-primary{
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.p-0\.5{
-  padding: 0.125rem;
-}
-
-.p-0{
-  padding: 0px;
+  background-color: rgb(118 238 89 / var(--tw-bg-opacity));
 }
 
 .p-1\.5{
@@ -811,6 +806,11 @@ video {
 
 .p-2{
   padding: 0.5rem;
+}
+
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .px-5{
@@ -833,11 +833,6 @@ video {
   padding-bottom: 0.25rem;
 }
 
-.px-1{
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
@@ -858,6 +853,10 @@ video {
   padding-bottom: 1rem;
 }
 
+.pt-1{
+  padding-top: 0.25rem;
+}
+
 .pr-4{
   padding-right: 1rem;
 }
@@ -870,12 +869,20 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.pt-1{
-  padding-top: 0.25rem;
+.pt-5{
+  padding-top: 1.25rem;
+}
+
+.pl-4{
+  padding-left: 1rem;
 }
 
 .text-center{
   text-align: center;
+}
+
+.text-\[0\.5rem\]{
+  font-size: 0.5rem;
 }
 
 .text-xs{
@@ -883,42 +890,13 @@ video {
   line-height: 1rem;
 }
 
-.text-\[0\.5rem\]{
-  font-size: 0.5rem;
-}
-
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
 
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .leading-none{
   line-height: 1;
-}
-
-.text-\[\#616262\]{
-  --tw-text-opacity: 1;
-  color: rgb(97 98 98 / var(--tw-text-opacity));
-}
-
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-gray-600{
@@ -926,24 +904,34 @@ video {
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.text-gray-100{
+.text-red-500{
   --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-.text-gray-900{
+.text-blue-500{
   --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
-.text-gray-400{
+.text-\[\#616262\]{
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+  color: rgb(97 98 98 / var(--tw-text-opacity));
+}
+
+.text-green-500{
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
 .shadow-md{
@@ -1055,8 +1043,9 @@ textarea{
   background-repeat: no-repeat;
 }
 
-.hover\:bg-\[\#dddddd93\]:hover{
-  background-color: #dddddd93;
+.hover\:bg-blue-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-red-500:hover{
@@ -1064,24 +1053,14 @@ textarea{
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-green-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#283543\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(40 53 67 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-400:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-
-.hover\:text-white:hover{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:text-gray-400:hover{
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-500:hover{
@@ -1089,7 +1068,7 @@ textarea{
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.group:hover .group-hover\:text-white{
+.hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
