--- a/src/build.css
+++ b/src/build.css
@@ -561,6 +561,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -597,20 +601,36 @@ video {
   z-index: 50;
 }
 
+.z-\[\]{
+  z-index: ;
+}
+
+.z-\[999\]{
+  z-index: 999;
+}
+
+.m-4{
+  margin: 1rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
+}
+
+.mr-4{
+  margin-right: 1rem;
+}
+
 .ml-7{
   margin-left: 1.75rem;
 }
 
-.ml-2{
-  margin-left: 0.5rem;
-}
-
-.mr-2{
-  margin-right: 0.5rem;
-}
-
 .ml-4{
   margin-left: 1rem;
+}
+
+.ml-0{
+  margin-left: 0px;
 }
 
 .flex{
@@ -637,10 +657,6 @@ video {
   width: 1.5rem;
 }
 
-.w-\[70px\]{
-  width: 70px;
-}
-
 .w-3\/4{
   width: 75%;
 }
@@ -659,6 +675,18 @@ video {
 
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-rotate-90{
+  --tw-rotate: -90deg;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-rotate-0{
+  --tw-rotate: -0deg;
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -699,18 +727,26 @@ video {
   gap: 0px;
 }
 
-.gap-x-5{
-  -webkit-column-gap: 1.25rem;
-          column-gap: 1.25rem;
-}
-
 .gap-x-2{
   -webkit-column-gap: 0.5rem;
           column-gap: 0.5rem;
 }
 
+.gap-x-5{
+  -webkit-column-gap: 1.25rem;
+          column-gap: 1.25rem;
+}
+
+.gap-y-3{
+  row-gap: 0.75rem;
+}
+
 .overflow-hidden{
   overflow: hidden;
+}
+
+.overflow-y-auto{
+  overflow-y: auto;
 }
 
 .rounded-md{
@@ -808,6 +844,10 @@ video {
   padding: 0.5rem;
 }
 
+.p-5{
+  padding: 1.25rem;
+}
+
 .px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -848,9 +888,8 @@ video {
   padding-right: 0.5rem;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.pr-0{
+  padding-right: 0px;
 }
 
 .pt-1{
@@ -859,22 +898,6 @@ video {
 
 .pr-4{
   padding-right: 1rem;
-}
-
-.pl-8{
-  padding-left: 2rem;
-}
-
-.pb-5{
-  padding-bottom: 1.25rem;
-}
-
-.pt-5{
-  padding-top: 1.25rem;
-}
-
-.pl-4{
-  padding-left: 1rem;
 }
 
 .text-center{
@@ -940,6 +963,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-colors{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -955,7 +984,7 @@ video {
 }
 
 .tox-promotion,
-.tox-statusbar__branding{
+.tox-statusbar__branding {
   display: none;
 }
 
@@ -974,6 +1003,24 @@ video {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #25282ba4;
+}
+
+.sidebar-menu::-webkit-scrollbar {
+  width: 5px;
+  border-radius: 3px;
+}
+
+.sidebar-menu::-webkit-scrollbar-track {
+  border-radius: 3px;
+}
+
+.sidebar-menu::-webkit-scrollbar-thumb {
+  background: rgb(73, 92, 113, 0.3);
+  border-radius: 3px;
+}
+
+.sidebar-menu::-webkit-scrollbar-thumb:hover {
+  background: rgba(73, 92, 113);
 }
 
 input:focus,
@@ -1043,6 +1090,18 @@ textarea{
   background-repeat: no-repeat;
 }
 
+.fadeOut {
+  opacity: 0;
+  visibility: hidden;
+  transition: height 0.3s  0.3s, opacity 0.3s;
+}
+
+.fadeIn {
+  opacity: 1;
+  visibility: visible;
+  transition: height 0.3s, opacity 0.3s,  visibility 0.3s 0.3s;
+}
+
 .hover\:bg-blue-500:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -1097,13 +1156,23 @@ textarea{
     width: 66.666667%;
   }
 
+  .md\:w-\[70px\]{
+    width: 70px;
+  }
+
+  .md\:w-\[265px\]{
+    width: 265px;
+  }
+
   .md\:flex-col{
     flex-direction: column;
   }
-}
 
-@media (min-width: 1024px){
-  .lg\:w-4\/6{
-    width: 66.666667%;
+  .md\:pr-\[70px\]{
+    padding-right: 70px;
+  }
+
+  .md\:pr-\[265px\]{
+    padding-right: 265px;
   }
 }
