--- a/src/build.css
+++ b/src/build.css
@@ -597,40 +597,24 @@ video {
   left: 0.5rem;
 }
 
-.z-50{
-  z-index: 50;
-}
-
-.z-\[\]{
-  z-index: ;
-}
-
 .z-\[999\]{
   z-index: 999;
+}
+
+.z-50{
+  z-index: 50;
 }
 
 .m-4{
   margin: 1rem;
 }
 
-.mt-4{
-  margin-top: 1rem;
-}
-
-.mr-4{
-  margin-right: 1rem;
+.ml-0{
+  margin-left: 0px;
 }
 
 .ml-7{
   margin-left: 1.75rem;
-}
-
-.ml-4{
-  margin-left: 1rem;
-}
-
-.ml-0{
-  margin-left: 0px;
 }
 
 .flex{
@@ -645,20 +629,60 @@ video {
   height: 100%;
 }
 
+.h-5{
+  height: 1.25rem;
+}
+
+.h-3{
+  height: 0.75rem;
+}
+
 .h-6{
   height: 1.5rem;
+}
+
+.h-10{
+  height: 2.5rem;
+}
+
+.h-2\.5{
+  height: 0.625rem;
+}
+
+.h-2{
+  height: 0.5rem;
 }
 
 .w-full{
   width: 100%;
 }
 
+.w-5{
+  width: 1.25rem;
+}
+
+.w-3{
+  width: 0.75rem;
+}
+
 .w-6{
   width: 1.5rem;
 }
 
+.w-10{
+  width: 2.5rem;
+}
+
 .w-3\/4{
   width: 75%;
+}
+
+.w-2\.5{
+  width: 0.625rem;
+}
+
+.w-2{
+  width: 0.5rem;
 }
 
 .min-w-\[280px\]{
@@ -727,6 +751,14 @@ video {
   gap: 0px;
 }
 
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-1{
+  gap: 0.25rem;
+}
+
 .gap-x-2{
   -webkit-column-gap: 0.5rem;
           column-gap: 0.5rem;
@@ -783,6 +815,16 @@ video {
   border-color: #a1a1a13e;
 }
 
+.border-c-red{
+  --tw-border-opacity: 1;
+  border-color: rgb(220 53 69 / var(--tw-border-opacity));
+}
+
+.border-c-green{
+  --tw-border-opacity: 1;
+  border-color: rgb(40 167 69 / var(--tw-border-opacity));
+}
+
 .border-b-slate-300{
   --tw-border-opacity: 1;
   border-bottom-color: rgb(203 213 225 / var(--tw-border-opacity));
@@ -822,14 +864,24 @@ video {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
-.bg-c-gray{
+.bg-gray-900{
   --tw-bg-opacity: 1;
-  background-color: rgb(31 45 61 / var(--tw-bg-opacity));
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
-.bg-primary{
+.bg-c-red{
   --tw-bg-opacity: 1;
-  background-color: rgb(118 238 89 / var(--tw-bg-opacity));
+  background-color: rgb(220 53 69 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F4F6F9\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 246 249 / var(--tw-bg-opacity));
+}
+
+.bg-c-green{
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 167 69 / var(--tw-bg-opacity));
 }
 
 .p-1\.5{
@@ -961,6 +1013,16 @@ video {
   color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
+.text-c-green{
+  --tw-text-opacity: 1;
+  color: rgb(40 167 69 / var(--tw-text-opacity));
+}
+
+.text-c-red{
+  --tw-text-opacity: 1;
+  color: rgb(220 53 69 / var(--tw-text-opacity));
+}
+
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -1051,6 +1113,11 @@ textarea:focus-visible{
   outline-offset: 2px;
 }
 
+/* 
+*{
+    font-family: "Vazirmatn" !important
+} */
+
 textarea{
   resize: none;
 }
@@ -1097,13 +1164,13 @@ textarea{
 .fadeOut {
   opacity: 0;
   visibility: hidden;
-  transition: height 0.3s  0.3s, opacity 0.3s;
+  transition: height 0.3s 0.3s, opacity 0.3s;
 }
 
 .fadeIn {
   opacity: 1;
   visibility: visible;
-  transition: height 0.3s, opacity 0.3s,  visibility 0.3s 0.3s;
+  transition: height 0.3s, opacity 0.3s, visibility 0.3s 0.3s;
 }
 
 .hover\:bg-blue-500:hover{
@@ -1121,9 +1188,24 @@ textarea{
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[\#283543\]:hover{
+.hover\:bg-gray-800:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(40 53 67 / var(--tw-bg-opacity));
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-c-green:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 167 69 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-c-red:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 53 69 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-500:hover{
@@ -1136,6 +1218,16 @@ textarea{
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.hover\:text-c-red:hover{
+  --tw-text-opacity: 1;
+  color: rgb(220 53 69 / var(--tw-text-opacity));
+}
+
+.hover\:text-c-green:hover{
+  --tw-text-opacity: 1;
+  color: rgb(40 167 69 / var(--tw-text-opacity));
+}
+
 .group\/item:hover .group-hover\/item\:text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1144,6 +1236,22 @@ textarea{
 @media (min-width: 640px){
   .sm\:flex{
     display: flex;
+  }
+
+  .sm\:w-auto{
+    width: auto;
+  }
+
+  .sm\:flex-wrap{
+    flex-wrap: wrap;
+  }
+
+  .sm\:justify-between{
+    justify-content: space-between;
+  }
+
+  .sm\:gap-1{
+    gap: 0.25rem;
   }
 }
 
@@ -1164,10 +1272,6 @@ textarea{
     width: 70px;
   }
 
-  .md\:w-\[265px\]{
-    width: 265px;
-  }
-
   .md\:w-\[200px\]{
     width: 200px;
   }
@@ -1180,11 +1284,12 @@ textarea{
     padding-right: 70px;
   }
 
-  .md\:pr-\[265px\]{
-    padding-right: 265px;
-  }
-
   .md\:pr-\[200px\]{
     padding-right: 200px;
+  }
+
+  .md\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
